[package]
name = "agora-tone-api"
version = "0.1.0"
edition = "2021"
description = "The AgoraTone API, written in Rust!"
repository = "https://github.com/henryk1229/agora-tone/tree/main/api"
authors = ["<henryk1229> <henryk1229@gmail.com>"]
keywords = ["generative music"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"